# mqtt-notifysend-bridge

./: README.md  pyproject.toml
mqtt_notifysend_bridge/: __init__.py  __main__.py
